<resources>
    <string name="app_name">Messaging</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">Not registered?</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="what_i_do">What I do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="client_with_given_nickname_was_not_found">Client with given nickname was not found!</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
</resources>