<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/notRegisteredHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/avatar_image_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/loginImage"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/loginImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="16sp"
            android:hint="@string/enter_your_nickname"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/main_edittext"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:id="@+id/usernameInput" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/usernameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signInBtn"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="16sp"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/main_edittext"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:id="@+id/passwordInput" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/filled_btn"
            android:backgroundTint="#5479f1"
            android:id="@+id/signInBtn"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:textSize="15sp"
        android:id="@+id/notRegisteredHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:letterSpacing="0.12"
        android:background="@drawable/outlined_btn"
        android:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:id="@+id/signUp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/white"
        android:visibility="gone"
        android:id="@+id/progressBarWrapper">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>