<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp">

            <ImageView
                android:layout_width="@dimen/settings_avatar_size"
                android:layout_height="@dimen/settings_avatar_size"
                android:src="@drawable/avatar_image_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/profilePicture"
                android:contentDescription="@string/profile_picture" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/profilePicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/settings_nickname_margin"
                android:layout_marginStart="@dimen/settings_nickname_margin"
                android:layout_marginEnd="@dimen/settings_nickname_margin"
                android:textSize="@dimen/settings_text_size"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/main_edittext"
                android:paddingHorizontal="@dimen/settings_horizontal_padding"
                android:paddingVertical="@dimen/settings_vertical_padding"
                android:gravity="center"
                android:id="@+id/nickname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/profilePicture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/settings_nickname_margin"
                android:layout_marginStart="@dimen/settings_nickname_margin"
                android:layout_marginEnd="@dimen/settings_nickname_margin"
                android:textSize="@dimen/settings_text_size"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/main_edittext"
                android:paddingHorizontal="@dimen/settings_horizontal_padding"
                android:paddingVertical="@dimen/settings_vertical_padding"
                android:gravity="center"
                android:id="@+id/nicknameEditText"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/nickname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/updateBtn"
                android:layout_marginTop="@dimen/settings_profession_top_margin"
                android:layout_marginStart="@dimen/settings_profession_margin"
                android:layout_marginEnd="@dimen/settings_profession_margin"
                android:textSize="@dimen/settings_text_size"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/main_edittext"
                android:paddingHorizontal="@dimen/settings_horizontal_padding"
                android:paddingVertical="@dimen/settings_vertical_padding"
                android:gravity="center"
                android:id="@+id/profession"
                android:layout_marginBottom="@dimen/settings_profession_bottom_margin" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/nicknameEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/updateBtn"
                android:layout_marginTop="@dimen/settings_profession_top_margin"
                android:layout_marginStart="@dimen/settings_profession_margin"
                android:layout_marginEnd="@dimen/settings_profession_margin"
                android:textSize="@dimen/settings_text_size"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/main_edittext"
                android:paddingHorizontal="@dimen/settings_horizontal_padding"
                android:paddingVertical="@dimen/settings_vertical_padding"
                android:gravity="center"
                android:id="@+id/professionEditText"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/settings_profession_bottom_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_btn_height"
                android:text="@string/update"
                android:textSize="@dimen/settings_text_size"
                android:background="@drawable/filled_btn"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/updateBtn"
                app:layout_constraintBottom_toTopOf="@id/logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/settings_update_btn_bot_margin" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/settings_text_size"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:background="@drawable/outlined_btn"
                android:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/white"
        android:id="@+id/progressBarWrapper">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>